@@ -1,5 +1,20 @@
-@main def hello(): Unit =
-  println("Hello world!")
-  println(msg)
+import org.apache.spark.sql.SparkSession
 
-def msg = "I was compiled by Scala 3. :)"
+// export JAVA_OPTS='--add-exports java.base/sun.nio.ch=ALL-UNNAMED'
+
+@main def hello(): Unit = {
+  val spark = SparkSession.builder
+      .master("local")
+      .appName("HelloWorld")
+      .getOrCreate()
+      
+    println("First SparkContext:")
+    println("APP Name :"+spark.sparkContext.appName);
+    println("Deploy Mode :"+spark.sparkContext.deployMode);
+    println("Master :"+spark.sparkContext.master);
+
+    // val df = List("hello", "world").toDF  
+    // df.show()                             
+
+    spark.stop()
+}
